2007-10-16	Sebastian Pölsterl	<sebp@cvs.gnome.org>

    * doc/repository.rng:
    * src/libcapuchin/Repository.cs:
    Added changelog element to XML schema

2007-10-08	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* examples/testapp.cs:
	* src/libcapuchin/Capuchin.cs:
	* src/libcapuchin/DownloadManager.cs:
	* src/libcapuchin/AppObject.cs:
	* src/libcapuchin/Downloaders/AbstractDownloader.cs:
	* src/libcapuchin/Downloaders/HttpDownlaoder.cs:
	* src/libcapuchin/Downloaders/FtpDownloader.cs:
	Renamed DownloadStatus signal to InstallationStatus.
	It contains plugin id, action, progress and speed.
	Implemented measurement of download speed for HTTP downloads.	
	
2007-10-08	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* src/capuchin/Main.cs:
	Createa .capuchin dir before initializing logging

2007-10-05	Sebastian Pölsterl	<sebp@cvs.gnome.org>

    * src/libcapuchin/Logging/
    * src/libcapuchin/Makefile.am
    * src/libcapuchin/AppObject.cs
    * src/libcapuchin/Globals.cs.in
    * src/libcapuchin/Capuchin.cs
    * src/capuchin/Main.cs:
    Added logging framework from beagle

2007-10-05	Sebastian Pölsterl	<sebp@cvs.gnome.org>

    * doc/repository.rng:
    Added RelaxNG schema definition

2007-10-05	Sebastian Pölsterl	<sebp@cvs.gnome.org>

    * configure.ac
    * Makefile.am
    * specs/
    * src/libcapuchin/Repository.cs
    * src/libcapuchin/ConfParser.cs
    * src/libcapuchin/Makefile.am
    * src/libcapuchin/AppObject.cs
    * src/libcapuchin/Capuchin.cs:
    Get rid of specs file.
    Added force_update parameter to Refresh()

2007-10-01	Sebastian Pölsterl	<sebp@cvs.gnome.org>

    Renamed project to Capuchin

2007-09-28  Sebastian Pölsterl  <marduk@k-d-w.org>

	* doc/:
	Added doc dir containing API doc and tutorial

2007-09-11	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* src/libnsm/DownloadManager.cs:
	Fixed: DownloadManager.Downloads is less accessible than Nsm.Download

2007-05-17  Sebastian Pölsterl  <marduk@k-d-w.org>

	* configure.ac:
	Post release version bump
