@@ -1,25 +1,29 @@
-<Combine name="capuchin" fileversion="2.0">
+<Combine name="capuchin" fileversion="2.0" outputpath="./build/bin/">
   <Configurations active="Debug">
     <Configuration name="Debug" ctype="CombineConfiguration">
       <Entry build="True" name="dbus-sharp" configuration="Debug" />
-      <Entry build="True" name="capuchin" configuration="Debug" />
+      <Entry build="True" configuration="Debug" />
       <Entry build="True" name="libcapuchin" configuration="Debug" />
+      <Entry build="True" name="tests" configuration="Debug" />
     </Configuration>
     <Configuration name="Release" ctype="CombineConfiguration">
       <Entry build="True" name="dbus-sharp" configuration="Release" />
-      <Entry build="True" name="capuchin" configuration="Release" />
+      <Entry build="True" configuration="Release" />
       <Entry build="True" name="libcapuchin" configuration="Release" />
+      <Entry build="True" name="tests" configuration="Release" />
     </Configuration>
   </Configurations>
-  <StartMode startupentry="capuchin" single="True">
+  <StartMode startupentry="Capuchin" single="True">
     <Execute type="None" entry="dbus-sharp" />
-    <Execute type="None" entry="capuchin" />
+    <Execute type="None" entry="Capuchin" />
     <Execute type="None" entry="libcapuchin" />
+    <Execute type="None" entry="tests" />
   </StartMode>
   <DeployTargets />
   <Entries>
     <Entry filename="./dbus-sharp/dbus-sharp.mdp" />
     <Entry filename="./src/capuchin/capuchin.mdp" />
     <Entry filename="./src/libcapuchin/libcapuchin.mdp" />
+    <Entry filename="./tests/tests.mdp" />
   </Entries>
 </Combine>
