@@ -1,42 +1,42 @@
 <Project name="libcapuchin" fileversion="2.0" language="C#" clr-version="Net_2_0" ctype="DotNetProject">
   <Configurations active="Debug">
     <Configuration name="Debug" ctype="DotNetProjectConfiguration">
-      <Output directory="./bin/Debug" assembly="libcapuchin" />
+      <Output directory="bin/Debug" assembly="libcapuchin" />
       <Build debugmode="True" target="Library" />
       <Execution runwithwarnings="True" consolepause="False" runtime="MsNet" clr-version="Net_2_0" />
       <CodeGeneration compiler="Csc" warninglevel="4" optimize="True" unsafecodeallowed="False" generateoverflowchecks="True" generatexmldocumentation="False" ctype="CSharpCompilerParameters" />
     </Configuration>
     <Configuration name="Release" ctype="DotNetProjectConfiguration">
-      <Output directory="./bin/Release" assembly="libcapuchin" />
+      <Output directory="bin/Release" assembly="libcapuchin" />
       <Build debugmode="False" target="Library" />
       <Execution runwithwarnings="True" consolepause="False" runtime="MsNet" clr-version="Net_2_0" />
       <CodeGeneration compiler="Csc" warninglevel="4" optimize="True" unsafecodeallowed="False" generateoverflowchecks="True" generatexmldocumentation="False" ctype="CSharpCompilerParameters" />
     </Configuration>
   </Configurations>
   <Contents>
-    <File name="./AppObject.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Repository.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Capuchin.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Compression/Decompresser.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Compression/IExtracter.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Compression/TarBz2Extracter.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Compression/TarGzExtracter.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Compression/TarExtracter.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Compression/ZipExtracter.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Verification/ChecksumVerifier.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Verification/GnuPGVerifier.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Verification/IVerifier.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Globals.cs.in" subtype="Code" buildaction="Nothing" />
-    <File name="./Downloaders" subtype="Directory" buildaction="Compile" />
-    <File name="./Downloaders/HttpDownloader.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Downloaders/FtpDownloader.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Downloaders/AbstractDownloader.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Download.cs" subtype="Code" buildaction="Compile" />
-    <File name="./DownloadManager.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Logging/FileSystem.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Logging/Log.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Logging/TeeTextWriter.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Logging/DelayedTextWriter.cs" subtype="Code" buildaction="Compile" />
+    <File name="AppObject.cs" subtype="Code" buildaction="Compile" />
+    <File name="Repository.cs" subtype="Code" buildaction="Compile" />
+    <File name="Capuchin.cs" subtype="Code" buildaction="Compile" />
+    <File name="Compression/Decompresser.cs" subtype="Code" buildaction="Compile" />
+    <File name="Compression/IExtracter.cs" subtype="Code" buildaction="Compile" />
+    <File name="Compression/TarBz2Extracter.cs" subtype="Code" buildaction="Compile" />
+    <File name="Compression/TarGzExtracter.cs" subtype="Code" buildaction="Compile" />
+    <File name="Compression/TarExtracter.cs" subtype="Code" buildaction="Compile" />
+    <File name="Compression/ZipExtracter.cs" subtype="Code" buildaction="Compile" />
+    <File name="Verification/ChecksumVerifier.cs" subtype="Code" buildaction="Compile" />
+    <File name="Verification/GnuPGVerifier.cs" subtype="Code" buildaction="Compile" />
+    <File name="Verification/IVerifier.cs" subtype="Code" buildaction="Compile" />
+    <File name="Globals.cs.in" subtype="Code" buildaction="Nothing" />
+    <File name="Downloaders" subtype="Directory" buildaction="Compile" />
+    <File name="Downloaders/HttpDownloader.cs" subtype="Code" buildaction="Compile" />
+    <File name="Downloaders/FtpDownloader.cs" subtype="Code" buildaction="Compile" />
+    <File name="Downloaders/AbstractDownloader.cs" subtype="Code" buildaction="Compile" />
+    <File name="Download.cs" subtype="Code" buildaction="Compile" />
+    <File name="DownloadManager.cs" subtype="Code" buildaction="Compile" />
+    <File name="Logging/FileSystem.cs" subtype="Code" buildaction="Compile" />
+    <File name="Logging/Log.cs" subtype="Code" buildaction="Compile" />
+    <File name="Logging/TeeTextWriter.cs" subtype="Code" buildaction="Compile" />
+    <File name="Logging/DelayedTextWriter.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="gnome-vfs-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
